# bonk

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SESSION_LOG.md  go.mod  go.sum  install.sh  pyproject.toml
.claude/skills/pr/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  claude.yml  release.yml
bonk/: db.py  main.py  paths.py  scheduler.py  seed.py
bonk/tui/: app.py
cmd/bonk/: main.go
infinite_anki/: engine.py  main.py  paths.py  seed.py
infinite_anki/tui/: app.py
internal/buildinfo/: buildinfo.go
internal/db/: db.go
internal/llm/: client.go
internal/serve/: serve.go
internal/skills/: guides.go  guides_test.go  skills.go
internal/skills/guides/: ci-cd-systems.md  design-dropbox.md  design-twitter.md  design-uber.md  messenger-chat-system.md  online-chess-platform.md
internal/tui/: tui.go
internal/voice/: voice.go
