[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bonk"
version = "0.1.0"
description = "CLI/TUI MVP: LLM-powered spaced repetition with Socratic follow-ups"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vish" }]
dependencies = [
  "textual>=0.70.0",
  "rich>=13.7.0",
  "httpx>=0.27.0"
]

[project.scripts]
bonk = "bonk.main:main"

[tool.hatch.build.targets.wheel]
packages = ["bonk"]
